samples/_failures_safe/1761040815_cc81b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5212a617.c: In function ‘main’:
./samples/SAFE/__tmp_5212a617.c:156:17: error: expected declaration or statement at end of input
  156 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_5212a617.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5212a617.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5212a617.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5212a617.c:156:17: error: expected declaration or statement at end of input
